--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -5,10 +5,14 @@
 }
 nav {
     background-color: #000;
-    padding: 15px 10px;
+    padding: 5px 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+nav img {
+    width: 100px;
+    height: auto;
 }
 nav ul {
     list-style-type: none;
@@ -18,6 +22,37 @@ nav ul li {
     display: inline;
     margin-right: 10px;
 }
+.content {
+    display: inline;
+    margin-right: 10px;
+    position: relative;
+}
+.btnInside {
+    background-color: #2bb4b4;
+    color: whitesmoke;
+    border-radius: 10px;
+}
+.btnInside:hover {
+    background-color: #3dcece;
+}
+#searchBtn {
+    position: absolute;
+    top: 56%;
+    right: 15%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    padding: 3px;
+
+}
+#clearBtn {
+    position: absolute;
+    top: 55%;
+    right: 5px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    padding: 3px;
+
+}
 nav a {
     text-decoration: none;
     color: #fff;
@@ -25,15 +60,14 @@ nav a {
 }
 input[type="text"] {
     width: 350px;
-    padding: 4px;
-    border-radius: 0 10px 10px 0;
+    padding: 6px;
+    padding-right: 30px;
+    box-sizing: border-box;
+    border-radius: 10px;
 }
 body {
     background-image: url("./background.jpg");
     background-size: cover; 
     background-repeat: no-repeat;
     font-family: Arial, sans-serif;
-}
-nav {
-
 }
