add homepage content

--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -22,7 +22,7 @@ nav ul li {
     display: inline;
     margin-right: 10px;
 }
-.content {
+.navInput {
     display: inline;
     margin-right: 10px;
     position: relative;
