--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -59,6 +59,27 @@ nav ul li {
 .content {
     margin: 30px;
 }
+.searchContent {
+    margin: 20px;
+    background-color: #ade1f581;/* #73f7f74d; */
+    padding: 10px;
+    border-radius: 5px;
+    color: #dbb931;
+    font-weight: bolder;
+}
+
+.searchContent img {
+    width: 100%;
+}
+#leftSide {
+    margin: 30px auto;
+    float: left;
+    width: 50%;
+}
+#rightSide {
+    margin-left: 50%;
+    flex-grow: 1;
+}
 #slogan,#aboutHead,#teamHead,#contactHead {
     color: #e8c53b
 }
@@ -67,7 +88,7 @@ nav ul li {
     font-weight: bold;
     font-size: 1.5em;
     background-color: #73f7f70c;
-    margin-left: 15%;
+    margin-top: 20px;
 }
 #bookNow {
     background-color: #f6c70b;
