--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -1,8 +1,8 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} */
 nav {
     background-color: #000;
     padding: 10px 10px;
